syntax = "proto2";

package stremio.core.types;

option java_package = "com.stremio.core.types.resource";

import "stremio/core/types/subtitle.proto";

message Stream {
  oneof source {
    Url url = 1;
    YouTube you_tube = 2;
    Torrent torrent = 3;
    External external = 4;
    PlayerFrame player_frame = 5;
    Rar rar = 6;
    Zip zip = 7;
  }
  optional string name = 8;
  optional string description = 9;
  optional string thumbnail = 10;
  repeated Subtitle subtitles = 11;
  required StreamBehaviorHints behavior_hints = 12;
  required StreamDeepLinks deep_links = 13;

  message Url {
    required string url = 1;
  }

  message YouTube {
    required string yt_id = 1;
  }

  message Torrent {
    required string info_hash = 1;
    optional int32 file_idx = 2;
    repeated string announce = 3;
    repeated string file_must_include = 4;
  }

  message External {
    optional string external_url = 1;
    optional string android_tv_url = 2;
  }

  message PlayerFrame {
    required string player_frame_url = 1;
  }

  message Rar {
    repeated string rar_urls = 1;
    optional int32 file_idx = 2;
    repeated string file_must_include = 3;
  }

  message Zip {
    repeated string zip_urls = 1;
    optional int32 file_idx = 2;
    repeated string file_must_include = 3;
  }
}

message StreamBehaviorHints {
  required bool not_web_ready = 1;
  optional string binge_group = 2;
  repeated string country_whitelist = 3;
  optional StreamProxyHeaders proxy_headers = 4;
  optional string filename = 5;
  optional string video_hash = 6;
  optional uint64 video_size = 7;
}

message StreamProxyHeaders {
  map<string, string> request = 1;
  map<string, string> response = 2;
}

message StreamDeepLinks {
  required string player = 1;
  required ExternalPlayerLink external_player = 2;

  message ExternalPlayerLink {
    optional string download = 1;
    optional string streaming = 2;
  }
}
